--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -43,11 +43,11 @@
               .purchase-btn__btn-text
                 購入へ進む
           - else
-            = link_to buy_item_path, class: "purchase-btn" do
+            = link_to buy_items_path, class: "purchase-btn" do
               .purchase-btn__btn-text
                 商品を編集する
         - else
-          = link_to buy_item_path, class: "purchase-btn" do
+          = link_to buy_items_path, class: "purchase-btn" do
             .purchase-btn__btn-text
               ログインして購入する
         = link_to root_path, class: "report-btn" do
