--- a/app/views/items/buy.html.haml
+++ b/app/views/items/buy.html.haml
@@ -19,8 +19,7 @@
         .text
           お支払い方法
         .credit-card
-          = form_tag(action: :pay, method: :post) do
-            %script.payjp-button{:src => "https://checkout.pay.jp", :type => "text/javascript" ,"data-text" => "購入する" ,"data-key" => "pk_test_30ca0f1531019a7f73cdfae4"}
+          現在実装中！
       .payment__price
         .text
           お支払い金額
