--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -39,7 +39,7 @@
             ０
         - if user_signed_in?
           - if current_user.id != @item.user_id
-            = link_to root_path, class: "purchase-btn" do
+            = link_to buy_items_path, class: "purchase-btn" do
               .purchase-btn__btn-text
                 購入へ進む
           - else
