商品購入機能
この後の実装のため、buyer_idカラムをitemsテーブルに追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -9,3 +9,5 @@
 @import "font-awesome-sprockets";
 @import "font-awesome";
 @import "modules/users";
+@import "modules/done";
+@import "credit_cards";
