--- a/app/views/credit_cards/show.html.haml
+++ b/app/views/credit_cards/show.html.haml
@@ -1,13 +1,13 @@
 .form-content
-  = link_to "トップに戻る", root_path
   .title
-    登録したクレジットカード↓
+    クレジットカードを登録しました。↓
   %br
   = "**** **** **** " + @default_credit_card_information.last4
   %br
-  - exp_month = @default_credit_card_information.exp_month.to_s
-  - exp_year = @default_credit_card_information.exp_year.to_s.slice(2,3)
-  = exp_month + " / " + exp_year
+  
   = form_tag(credit_card_path(current_user.id), method: :delete, id: 'charge-form',  name: "inputForm") do
     %input{ type: "hidden", name: "credit_card_id", value: "" }
     %button.delete-btn 削除する
+    .attention-text
+      ※商品を購入中だった方は、もう一度商品のページから購入ボタンを押してください。
+    = link_to "トップに戻る", root_path, class: "top-link-btn"
