My page creation

--- a/app/views/devise/registrations/create_information.haml
+++ b/app/views/devise/registrations/create_information.haml
@@ -4,4 +4,4 @@
   .userRegistration__content
     %h2 登録が完了しました
     .userRegistration__content__submit
-      = link_to "トップへ戻る", root_path, {class: "submitBtn"}
+      = link_to "トップへ戻る", root_path, {class: "btn"}
