--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -84,12 +84,118 @@
       height: 50px;
       background: #3abbbb;
       margin: 0 auto;
-      .submitBtn {
-        font-size: 15px;
-        line-height: 50px;
-        text-decoration: none;
-        color: #ffffff;
-      }
+    }
+    &__exit {
+      width: 150px;
+      height: 50px;
+      background: #7e7e7e;
+      margin: 0 auto;
+    }
+    .btn {
+      font-size: 15px;
+      line-height: 50px;
+      text-decoration: none;
+      color: #ffffff;
     }
   }
+}
+
+.userPage {
+  background-color: #f5f5f5;
+  height: 900px;
+  &__content {
+    width: 1020px;
+    margin: 40px auto ;
+    .sideBar {
+      float: left;
+      width: 280px;
+      margin: 0 40px 0 0;
+    }
+    h2 {
+      margin: 40px 0 0;
+      font-weight: bold;
+    }
+    .list {
+      background-color: #fff;
+      border-top: 1px solid #eee;
+      a {
+        position: relative;
+        display: block;
+        min-height: 48px;
+        padding: 16px;
+        background: #fff;
+        font-size: 14px;
+        color: #333;
+      }
+    }
+    .mainField {
+      float: right;
+      margin-top: 40px;
+      width: 700px;
+      height: 800px;
+      background-color: #fff;
+      &__user {
+        height: 200px;
+        padding-top: 40px;
+        border-bottom: 2px solid rgb(230, 97, 97);
+        &__icon {
+          width: 50px;
+          height: 50px;
+          margin: 0 auto;
+        }
+        &__name {
+          font-size: 20px;
+          text-align: center;
+          margin-bottom: 30px;
+        }
+        &__number {
+          display: flex;
+          justify-content: center;
+          &--exhibition, &--buy {
+            margin-right: 16px;
+            display: flex;
+          }
+          h5 {
+            margin-right: 8px;
+          }
+        }
+      }
+      h3 {
+        padding-left: 16px;
+        width: 100%;
+        height: 72px;
+        line-height: 72px;
+        font-weight: bold;
+      }
+      &__tabs {
+        display: flex;
+        // li {}
+        &__current {
+          height: 74px;
+          width: 50%;
+          line-height: 74px;
+          text-align: center;
+          background-color: rgb(230, 97, 97);
+          h4 {
+            color: #000;
+            font-weight: bold;
+          }
+        }
+        &__past {
+          height: 74px;
+          width: 50%;
+          line-height: 74px;
+          text-align: center;
+          background-color: rgb(235, 231, 231);
+          h4 {
+            color: #000;
+            font-weight: bold;
+          }
+        }
+      }
+      &__content {
+        height: calc(800px - 148px);
+      }
+  }
+}
 }
