--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -109,9 +109,9 @@
         .item-boxes
           - @items.each do |item|
             = link_to item_path(item.id), class: "item" do
-              - if @item_buyer.present? 
-                .items-box_photo__sold
-                  .items-box_photo__sold__inner
+              - if item.buyer_id.present?
+                .item__sold
+                  .item__sold__inner 
                     SOLD
               .photo
                 = image_tag item.item_photos.find_by(params[:id]).image
