email Validation correction and test execution

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -12,7 +12,7 @@
       .field
         = f.label :email, "メールアドレス (必須)", {class: "label"}
         %br/
-        = f.email_field :email, autofocus: true, autocomplete: "email"
+        = f.email_field :email, autofocus: true, autocomplete: "email", placeholder: '例) aaa@email.com'
       .field
         = f.label :password, "パスワード 7文字以上 (必須)", {class: "label"}
         %br/
