--- a/app/views/items/_detail-table.html.haml
+++ b/app/views/items/_detail-table.html.haml
@@ -3,7 +3,7 @@
     %th 
       出品者
     %td 
-      商品出品機能が完成次第実装
+      = @item.user.nickname
   %tr
     %th 
       カテゴリー
@@ -14,11 +14,6 @@
       ブランド
     %td 
       = @item.brand
-  %tr
-    %th 
-      商品のサイズ
-    %td 
-      itemモデルにsizeカラムを追加した場合データが入る
   %tr
     %th 
       商品の状態
