--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "reset";
-@import "modules/top";
-@import "modules/items";
+@import "modules/items_index";
+@import "modules/items_new";
+@import "modules/dropdown";
 @import "font-awesome-sprockets";
 @import "font-awesome";
