--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -12,14 +12,14 @@
             %li
               = link_to "商品を編集する", "#", class: "edit-btn"
             %li
-              = link_to "商品を削除する", "#s", class: "delete-btn"
+              = link_to "商品を削除する", item_path(@item.id), class: "delete-btn", method: :delete
       %ul
         %li.heading-photo
-          = image_tag @item.item_photos.find_by(params[:id]).image.to_xml
+          = image_tag @item.item_photos.find_by(params[:id]).image.url
         %ul.photo-list
           %li.photo
             - @item.item_photos.each do |photo|
-              = image_tag photo.image.to_xml
+              = image_tag photo.image.url
       .item-information__price
         = "#{@item.price}円"
       .item-information__tax-include
