--- a/app/views/users/_sideBar.html.haml
+++ b/app/views/users/_sideBar.html.haml
@@ -6,7 +6,7 @@
       %li.list
         = link_to "いいね一覧", "#"
       %li.list
-        = link_to "出品する", "#"
+        = link_to "出品する", new_item_path
       %li.list
         = link_to "出品した商品-出品中", "#"
       %li.list
