--- a/app/views/items/_detail-table.html.haml
+++ b/app/views/items/_detail-table.html.haml
@@ -26,9 +26,9 @@
       = @item.shipping_fee.name
   %tr
     %th 
-      発送元の地域
+      発送方法
     %td
-      = link_to "#{@item.shipping_area_id}", "#", class: "shipping-area-link"
+      = @item.shipping_way.name
   %tr
     %th 
       発送日の目安
