--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -103,6 +103,7 @@
 .userPage {
   background-color: #f5f5f5;
   height: 900px;
+  padding-top: 20px;
   &__content {
     width: 1020px;
     margin: 40px auto ;
@@ -130,7 +131,6 @@
     }
     .mainField {
       float: right;
-      margin-top: 40px;
       width: 700px;
       height: 800px;
       background-color: #fff;
@@ -146,17 +146,18 @@
         &__name {
           font-size: 20px;
           text-align: center;
-          margin-bottom: 30px;
+          margin-bottom: 40px;
         }
         &__number {
+          padding: 0 40px;
           display: flex;
-          justify-content: center;
+          justify-content: space-between;
           &--exhibition, &--buy {
             margin-right: 16px;
             display: flex;
           }
           h5 {
-            margin-right: 8px;
+            font-size: 20px;
           }
         }
       }
@@ -169,7 +170,6 @@
       }
       &__tabs {
         display: flex;
-        // li {}
         &__current {
           height: 74px;
           width: 50%;
@@ -194,8 +194,36 @@
         }
       }
       &__content {
-        height: calc(800px - 148px);
+        height: calc(800px - 200px);
+        // overflow: scroll;
+        display: flex;
+        h5 {
+          text-align: center;
+          font-size: 20px;
+        }
+        &__list {
+          width: 350px;
+          height: 100%;
+          overflow: scroll;
+          &__item {
+            border-bottom: 1px solid rgb(230, 229, 229);
+            display: flex;
+            &--image {
+              height: 125px;
+              line-height: 125px;
+              margin-right: 30px;
+            }
+            &--name {
+              height: 125px;
+              line-height: 125px;
+            }
+          }
+        }
       }
+    }
   }
 }
+
+.saling_item {
+  border-right: 2px solid rgb(150, 149, 149);
 }
