--- a/app/assets/stylesheets/modules/_items_new.scss
+++ b/app/assets/stylesheets/modules/_items_new.scss
@@ -2,19 +2,6 @@
   box-sizing: border-box;
 }
 
-img {
-  vertical-align: middle;
-  box-sizing: border-box;
-}
-
-.error-messages{
-  color: #ff0211;
-  font-size: 14px;
-  line-height: 1.4em;
-  margin: 16px 0;
-  box-sizing: border-box;
-}
-
 .body-new {
   overflow: scroll;
   width: 100%;
@@ -37,131 +24,170 @@ img {
   
   .main {
     .sell-container {
-      box-sizing: border-box;
-      max-width: 700px;
-      width: 100%;
-      margin: 0px auto;
-      background-color: rgb(255, 255, 255);
-  
-      // 画像部分
-      &__content{
-        height: auto;
-        padding: 40px;
-        border-bottom: 1px;
-        border-bottom-color: #efefef;
-        border-bottom-style: solid;
-        &__max-sheet{
-          margin-top: 16px;
-        }
-        .sell-title{
-          align-items: center;
-          margin: 0!important;
-          box-sizing: border-box;
-          &__text{
-            font-size: 14px;
-            font-weight: 600;
-            line-height: 1.4em;
-          }
-          &__require{
-            margin-left: 8px;
-            font-size: 12px;
-            padding: 0 4px;
-            background-color: #ff0211;
-            color: #fff;
-            border-radius: 2px;
-            display: inline-block;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 1.4em;
-            margin: 0;
-          }
-        }
-        &__upload{
-          margin-top: 16px;
-          display: flex;
-          flex-wrap: wrap;
-          &__items{
-            height: auto;
-            width: 100%;
-  
-            &__box{
-              height: auto;
-              align-content: center;
-              align-items: center;
-              cursor: pointer;
+      .new-wrapper{
+        &__main{
+          width: 700px;
+          padding:20px;
+          margin: 0 auto;
+          font-size: 14px;
+          margin-bottom: 2px;
+          background-color: white;
+          .flexbox{
+            display: flex;
+            flex-wrap: wrap;
+            margin: 0 auto;
+            width: 660px;
+            .file-field{
+              display: none;
+            }
+            .new-wrapper__main__preview,.new-wrapper__main__preview-first{
+              margin: 16px 0;
               display: flex;
               flex-wrap: wrap;
-              justify-content: center;
-              position: relative;
-              border-width: 1px;
-  
-              #output-box{
-                box-sizing: border-box;
-                display: flex;
-                flex-wrap: wrap;
-                width: 100%;
-                height: auto;
-  
-                .preview-image{
-                  box-sizing: border-box;
-                  height: 150px;
-                  width: 20%;
-                  padding: 0px 4px;
-                  margin-top: 8px;
-  
-                  &__figure{
-                    margin:0 auto;
-                    height: 118px;
-                    background-color: rgb(245, 245, 245);
-                    img{
-                      box-sizing: border-box;
-                      width: 100%;
-                      height: 100%;
-                      object-fit: contain;
-                    }
-                  }
-                  &__button{
-                    border-top-width: 1px;
-                    border-top-color: rgb(204, 204, 204);
-                    border-top-style: solid;
-                    background-color: rgb(245, 245, 245);
-                    justify-content: space-around;
-                    display: flex;
-                    align-items: center;
-                    height: 32px;
-                    color: rgb(0, 149, 238);
-                  }
+              &__image{
+                position: relative;
+                &__img{
+                  width: 131px;
+                  margin-right: 1px;
+                  height: 160px;
+                  object-fit: cover;
                 }
-  
-                #image-input{
-                  box-sizing: border-box;
-                  height: 100%;
-                  -webkit-flex: 1;
-                  flex: 1;
-                  margin-top: 8px;
-  
-                  .sell-container__content__upload__items__box__label{
-                    box-sizing: border-box;
-                    background-color: rgb(245, 245, 245);
-                    height: 150px;
-                    border-width: 1px;
-                    border-style: dashed;
-                    border-color: rgb(204, 204, 204);
-                    text-align: center;
-                    display: flex;
-                    align-items: center;
-                    justify-content: center;
-                    i{
-                      box-sizing: border-box;
-                      margin-bottom: 8px;
-                    }
-                  }
+                &__delete-btn{
+                  text-shadow: 0 0 2px white;
+                  cursor: pointer;
+                  position: absolute;
+                  top: 0px;
                 }
               }
             }
           }
+          // 編集箇所ここまで
+          .spacing{
+            padding-top: 20px;
+          }
+          .require{
+            padding: 3px;
+            color: white;
+            font-size: 12px;
+            border-radius: 4px;
+            background-color: #3ccace;
+            
+          }
+          .any{
+            padding: 3px;
+            color: white;
+            font-size: 12px;
+            border-radius: 4px;
+            background-color: #ddd;
+          }
+          &__title{
+            font-weight: bold;
+            font-size: 14px;
+            padding: 0 12px;
+            padding-bottom: 16px;
+          }
+          &__subtitle{
+            color: #999;
+            padding: 0 12px;
+            font-weight: bold;
+            padding-bottom: 20px;
+          }
+          &__text{
+            padding: 0 12px;
+          }
+          &__image-field{
+            width: 660px;
+            height: 160px;
+            margin: 16px auto;
+            background-color: #eee;
+            border: 1px dashed #ccc;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 12px;
+            text-align: center;
+            position: relative;
+            .fa-camera{
+              position: absolute;
+              top: 40px;
+              font-size: 20px;
+            }
+            &__text{
+              padding-top: 20px;
+            }
+          }
+      
+          &__input-text{
+            height: 44px;
+            line-height: 44px;
+            font-size: 16px;
+            padding: 0 16px;
+            width: 660px;
+            margin-left: 10px;
+            border-radius: 4px;
+          }
+          &__input-textarea{
+            height: 160px;
+            font-size: 16px;
+            padding: 16px;
+            width: 660px;
+            margin-left: 10px;
+            border-radius: 4px;
+          }
+          &__input-select{
+            height: 44px;
+            line-height: 44px;
+            font-size: 16px;
+            padding: 0 16px;
+            width: 620px;
+            border-radius: 4px;
+          }
+          &__input-price{
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+            &__input{
+              text-align: end;
+              height: 44px;
+              line-height: 44px;
+              font-size: 16px;
+              padding: 0 16px;
+              width: 300px;
+              margin-left: 10px;
+              border-radius: 4px;
+            }
+          }
+          .float-left{
+            float: left;
+          }
+          .float-right{
+            float: right;
+          }
+          &__submit{
+            border-radius: 4px;
+            display: block;
+            margin: 0 auto;
+            margin-top: 40px;
+            width: 400px;
+            height: 44px;
+            background-color: #3ccace;
+            color: white;
+            font-weight: bold;
+            font-size: 16px;
+            border: 0px solid #000;
+          }
+          &__caution{
+            font-size: 12px;
+            padding: 20px;
+          }
+          &__create{
+            text-align: center;
+            font-size: 20px;
+            font-weight: bold;
+          }
         }
       }
+
   
       .items-section {
         height: 486px;
@@ -188,7 +214,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -206,7 +232,7 @@ img {
             }
             &__message {
               margin-top: 26px;
-              color: #ff0211;
+              color: #3ccace;
               font-size: 14px;
             }
             
@@ -222,7 +248,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -245,7 +271,7 @@ img {
               color: gainsboro;
             }
             &__message2 {
-              color: #ff0211;
+              color: #3ccace;
               font-size: 14px;
             }
           }
@@ -271,46 +297,16 @@ img {
               font-weight: 600;
               margin-bottom: 24px;
             }
-            .listing-form-box {
-              .cat-list-text {
-                display: flex;
-                font-weight: 600;
-                &__title {
-                  font-size: 14px;
-                }
-                &__attention {
-                  margin-left: 8px;
-                  width: 32px;
-                  height: 16px;
-                  font-size: 12px;
-                  background-color: #ff0211;
-                  color: white;
-                  text-align: center;
-                  line-height: 16px;
-                }
-              }
-              .listing-select-wrapper {
-                &__cat-input {
-                  .select-cat {
-                    width: 620px;
-                    height: 48px;  
-                    min-height: 100vh;
-                    cursor: pointer;
-                    margin-top: 16px;
-                  }
-                }
-                &__box {
-                  &--select {
-                    width: 620px;
-                    height: 48px;  
-                    cursor: pointer;
-                    margin-top: 16px;
-                  }
-                }
-                #error_category {
-                  color: #ff0211;
-                  font-size: 14px;
-                }
+            .cat-title {
+              font-size: 14px;
+              font-weight: bold;
+              margin-bottom: 16px;
+              .require {
+                padding: 3px;
+                color: white;
+                font-size: 12px;
+                background-color: #3ccace;
+                
               }
             }
             .size-wrapper {
@@ -326,7 +322,7 @@ img {
                   width: 32px;
                   height: 16px;
                   font-size: 12px;
-                  background-color: #ff0211;
+                  background-color: #3ccace;
                   color: white;
                   text-align: center;
                   line-height: 16px;
@@ -383,7 +379,7 @@ img {
                   width: 32px;
                   height: 16px;
                   font-size: 12px;
-                  background-color: #ff0211;
+                  background-color: #3ccace;
                   color: white;
                   text-align: center;
                   line-height: 16px;
@@ -402,7 +398,7 @@ img {
             
             
             &__message {
-              color: #ff0211;
+              color: #3ccace;
               font-size: 14px;
               margin-top: 16px;
             }
@@ -440,7 +436,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -456,7 +452,7 @@ img {
               }
             }
             &__message {
-              color: #ff0211;
+              color: #3ccace;
               font-size: 14px;
               margin-top: 16px;
             }
@@ -472,7 +468,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -499,7 +495,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -515,7 +511,7 @@ img {
               }
             }
             &__message {
-              color: #ff0211;
+              color: #3ccace;
               font-size: 14px;
               margin-top: 16px;
             }
@@ -531,7 +527,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -578,7 +574,7 @@ img {
                 width: 32px;
                 height: 16px;
                 font-size: 12px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 text-align: center;
                 line-height: 16px;
@@ -605,7 +601,7 @@ img {
               font-size: 14px;
               margin-top: 16px;
               text-align: right;
-              color: #ff0211;
+              color: #3ccace;
             }
             &__fee-box {
               width: 620px;
@@ -672,7 +668,7 @@ img {
               .submit {
                 width: 360px;
                 height: 48px;
-                background-color: #ff0211;
+                background-color: #3ccace;
                 color: white;
                 font-size: 17px;
                 text-align: center;
@@ -715,3 +711,126 @@ img {
     }
   }
 }
+
+
+
+
+
+// &__content{
+//   height: auto;
+//   padding: 40px;
+//   border-bottom: 1px;
+//   border-bottom-color: #efefef;
+//   border-bottom-style: solid;
+//   &__max-sheet{
+//     margin-top: 16px;
+//   }
+//   .sell-title{
+//     align-items: center;
+//     margin: 0!important;
+//     box-sizing: border-box;
+//     &__text{
+//       font-size: 14px;
+//       font-weight: 600;
+//       line-height: 1.4em;
+//     }
+//     &__require{
+//       margin-left: 8px;
+//       font-size: 12px;
+//       padding: 0 4px;
+//       background-color: #ff0211;
+//       color: #fff;
+//       border-radius: 2px;
+//       display: inline-block;
+//       font-style: normal;
+//       font-weight: 600;
+//       line-height: 1.4em;
+//       margin: 0;
+//     }
+//   }
+//   &__upload{
+//     margin-top: 16px;
+//     display: flex;
+//     flex-wrap: wrap;
+//     &__items{
+//       height: auto;
+//       width: 100%;
+
+//       &__box{
+//         height: auto;
+//         align-content: center;
+//         align-items: center;
+//         cursor: pointer;
+//         display: flex;
+//         flex-wrap: wrap;
+//         justify-content: center;
+//         position: relative;
+//         border-width: 1px;
+
+//         #output-box{
+//           box-sizing: border-box;
+//           display: flex;
+//           flex-wrap: wrap;
+//           width: 100%;
+//           height: auto;
+
+//           .preview-image{
+//             box-sizing: border-box;
+//             height: 150px;
+//             width: 20%;
+//             padding: 0px 4px;
+//             margin-top: 8px;
+
+//             &__figure{
+//               margin:0 auto;
+//               height: 118px;
+//               background-color: rgb(245, 245, 245);
+//               img{
+//                 box-sizing: border-box;
+//                 width: 100%;
+//                 height: 100%;
+//                 object-fit: contain;
+//               }
+//             }
+//             &__button{
+//               border-top-width: 1px;
+//               border-top-color: rgb(204, 204, 204);
+//               border-top-style: solid;
+//               background-color: rgb(245, 245, 245);
+//               justify-content: space-around;
+//               display: flex;
+//               align-items: center;
+//               height: 32px;
+//               color: rgb(0, 149, 238);
+//             }
+//           }
+
+//           #image-input{
+//             box-sizing: border-box;
+//             height: 100%;
+//             -webkit-flex: 1;
+//             flex: 1;
+//             margin-top: 8px;
+
+//             .sell-container__content__upload__items__box__label{
+//               box-sizing: border-box;
+//               background-color: rgb(245, 245, 245);
+//               height: 150px;
+//               border-width: 1px;
+//               border-style: dashed;
+//               border-color: rgb(204, 204, 204);
+//               text-align: center;
+//               display: flex;
+//               align-items: center;
+//               justify-content: center;
+//               i{
+//                 box-sizing: border-box;
+//                 margin-bottom: 8px;
+//               }
+//             }
+//           }
+//         }
+//       }
+//     }
+//   }
+// }
