--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -5,26 +5,25 @@
   
   .main
     .sell-container
-      = form_with model: @item do |f|
-        .sell-container__content
-          .sell-title
-            %h3.sell-title__text
+      = form_with model: @item, url: items_path, local: true do |f|
+        .new-wrapper
+          .new-wrapper__main
+            .new-wrapper__main__title
               出品画像
-              %span.sell-title__require
-                必須
-          .sell-container__content__max-sheet 最大10枚までアップロードできます
-          .sell-container__content__upload
-            .sell-container__content__upload__items
-              .sell-container__content__upload__items__box
-                = f.fields_for :item_photos do |item_photo|
-                  %ul#output-box
-                    %div#image-input{tabindex:"0"}
-                      = item_photo.label :image, for: "item_images0", class: 'sell-container__content__upload__items__box__label', data: {label_id: 0 } do 
-                        = item_photo.file_field :image, class: "sell-container__content__upload__items__box__input", id: "item_images0", style: 'display: none;'
-                        %pre
-                          %i.fas.fa-camera.fa-lg
-                          クリックしてファイルをアップロード
-          .error-messages#error-image
+              %span{class: "require"} 必須
+            .new-wrapper__main__text
+              最大10枚までアップロードできます
+            -# 編集箇所ここから
+            .flexbox
+              .new-wrapper__main__preview
+              %label{id: "image-wrapper", action: request.path}
+                .new-wrapper__main__image-field
+                  %i{class: "fas fa-camera"}
+                  .new-wrapper__main__image-field__text
+                  クリックしてファイルをアップロード
+                = f.fields_for :item_photos do |i|
+                  = i.file_field :image, {class: "file-field"}
+            
         
         .items-section
           .items-main
@@ -60,15 +59,12 @@
             .details-box
               .details-box__maintitle
                 商品の詳細
-              .listing-form-box
-                .cat-list-text
-                  .cat-list-text__title
-                    カテゴリー
-                  .cat-list-text__attention
-                    必須
-                .listing-select-wrapper
-                  .listing-select-wrapper__cat-input
-                    = f.select :category_id, @category_parent_array, {}, {class: 'select-cat', id: 'parent_category'}
+              .cat-title
+                カテゴリー
+                %span{class: "require"} 必須
+              #request{action: request.path}  
+                #category-select
+                
                 
               
             
@@ -159,7 +155,27 @@
               .btn-box__back
                 = link_to root_path do
                   もどる
-  
   .footer
     .footer-logo
       = image_tag("logo-white.png", class: "logo")
+
+      -# = form_with model: @item do |f|
+      -#   .sell-container__content
+      -#     .sell-title
+      -#       %h3.sell-title__text
+      -#         出品画像
+      -#         %span.sell-title__require
+      -#           必須
+      -#     .sell-container__content__max-sheet 最大10枚までアップロードできます
+      -#     .sell-container__content__upload
+      -#       .sell-container__content__upload__items
+      -#         .sell-container__content__upload__items__box
+      -#           = f.fields_for :item_photos do |item_photo|
+      -#             %ul#output-box
+      -#               %div#image-input{tabindex:"0"}
+      -#                 = item_photo.label :image, for: "item_images0", class: 'sell-container__content__upload__items__box__label', data: {label_id: 0 } do 
+      -#                   = item_photo.file_field :image, class: "sell-container__content__upload__items__box__input", id: "item_images0", style: 'display: none;'
+      -#                   %pre
+      -#                     %i.fas.fa-camera.fa-lg
+      -#                     クリックしてファイルをアップロード
+      -#     .error-messages#error-image
