--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -15,7 +15,7 @@
     .nav
       .list-left
         .list-left__category
-          = link_to "編集", edit_item_path(@items.ids) 
+          -# = link_to "編集", edit_item_path(@items.ids) 
             
         .list-left__brand
           = link_to do
