--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -227,3 +227,11 @@
 .saling_item {
   border-right: 2px solid rgb(150, 149, 149);
 }
+
+.field_with_errors {
+  display: contents;
+}
+
+#error_explanation {
+  margin-bottom: 20px;
+}
