商品編集（カテゴリー機能）

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -10,7 +10,7 @@
         .item-information__link-box
           %ul
             %li
-              = link_to "商品を編集する", "#", class: "edit-btn"
+              = link_to "商品を編集する", edit_item_path(@item.id), class: "edit-btn"
             %li
               = link_to "商品を削除する", item_path(@item.id), class: "delete-btn", method: :delete
       %ul
