--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -5,7 +5,7 @@
   
   .main
     .sell-container
-      = form_with model: @item, url: items_path, local: true do |f|
+      = form_with model: @item, url: item_path(@item.id), local: true do |f|
         .new-wrapper
           .new-wrapper__main
             .new-wrapper__main__title
@@ -65,10 +65,24 @@
               .details-box__maintitle
                 商品の詳細
               .new-wrapper__main__title
-                カテゴリー
-                %span{class: "require"} 必須
-              #request{action: request.path}  
-                #category-select
+                = f.label :category_id , class: 'require category-wrapper-label', id: "category-select" do
+                  カテゴリー：
+                  %span.required ※必須
+                  .category-wrapper-box
+                    #category-select
+                      -# = f.select :parent_name, options_for_select(@category_parent_array.map{|parent_hash|}, {selected:@item.category.parent.parent.name}, { class: 'new-wrapper__main__input-select select-parent', id: 'select-parent'}
+                      = f.select :child_id, options_for_select(@category_parent_array.map{|parent_hash| [parent_hash.name, parent_hash.id, {data:{category: parent_hash.id}}]}, {prompt: "指定なし", selected: @item.category.parent.parent.id}),{}, {class: 'new-wrapper__main__input-select select-parent', id: 'select-parent'}
+                      = f.select :child_id, options_for_select(@category_children_array.map{|child_hash| [child_hash.name, child_hash.id, {data:{category: child_hash.id}}]}, {prompt: "指定なし", selected: @item.category.parent.id}),{}, {class: 'new-wrapper__main__input-select select-child', id: 'select-parent'}
+                      = f.select :category_id, options_for_select(@category_grandchildren_array.map{|grandchild_hash| [grandchild_hash.name, grandchild_hash.id, {data:{category: grandchild_hash.id}}]}, {prompt: "指定なし", selected: @item.category.id}),{}, {class: 'new-wrapper__main__input-select select-grandchild', id: 'item_category_id'}
+                      -# -# .category-wrapper-select
+                      -# -#   .category-wrapper-select__box
+                      -#     = f.select :parent_name, @category_parent_array, {selected:@item.category.parent.parent.name}, { class: 'new-wrapper__main__input-select select-parent', id: 'parent_category'}
+                      -# -# .category-wrapper-select#children_wrapper
+                      -# -#   .category-wrapper-select__box
+                      -#     = f.select :child_id, options_for_select(@category_children_array.map{|child_hash| [child_hash.name, child_hash.id, {data:{category: child_hash.id}}]}, {prompt: "指定なし", selected: @item.category.parent.id}),{}, {class: 'new-wrapper__main__input-select select-child', id: 'child_category'}
+                      -# .category-wrapper-select#grandchildren_wrapper
+                      -#   .category-wrapper-select__box
+                      -#     = f.select :category_id, options_for_select(@category_grandchildren_array.map{|grandchild_hash| [grandchild_hash.name, grandchild_hash.id, {data:{category: grandchild_hash.id}}]}, {prompt: "指定なし", selected: @item.category.id}),{}, {class: 'new-wrapper__main__input-select select-grandchild', id: 'grandchild_category'}
                 
               
             
