ユーザー機能　updatta

--- a/app/assets/stylesheets/modules/users.scss
+++ b/app/assets/stylesheets/modules/users.scss
@@ -91,6 +91,12 @@
       background: #7e7e7e;
       margin: 0 auto;
     }
+    &__return {
+      width: 150px;
+      height: 50px;
+      background: #3abbbb;
+      margin: 10px auto;
+    }
     .btn {
       font-size: 15px;
       line-height: 50px;
