--- a/app/views/users/erase.html.haml
+++ b/app/views/users/erase.html.haml
@@ -5,3 +5,5 @@
     %h2 ログアウトしますか？
     .userRegistration__content__exit
       = link_to "ログアウトする", sign_out_path, class: "btn"
+    .userRegistration__content__return
+      = link_to "トップに戻る", root_path, class: "btn"
