編集ページ画像

--- a/app/assets/stylesheets/modules/_items_new.scss
+++ b/app/assets/stylesheets/modules/_items_new.scss
@@ -115,7 +115,11 @@
             &__text{
               padding-top: 20px;
             }
+            .itemimg {
+              display: flex;
+            }
           }
+          
       
           &__input-text{
             height: 44px;
