--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -112,7 +112,7 @@
           新規投稿商品
           .item-boxes
             - @items.each do |item|
-              = link_to item_path(item.id), class: "item" do
+              = link_to edit_item_path(item), class: "item" do
                 - if item.buyer_id.present?
                   .item__sold
                     .item__sold__inner 
@@ -132,7 +132,6 @@
                       = icon('fas', 'star')
                     .like-count
                       0
-          
     .pickup-2
       .pickup-2__head
         ピックアップブランド
