--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -62,8 +62,8 @@
               .cat-title
                 カテゴリー
                 %span{class: "require"} 必須
-              #request{action: request.path}  
-                #category-select
+              #request2{action: request.path}  
+                #category-select2
                 
                 
               
