出品&編集の、画像&カテゴリー
リロードしないとjsが動かない
(データの保存はされている)

また、データベースからitemを消すことができない(関連するitem_photoを消してからだと上手くいく)

--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -17,6 +17,8 @@
       .list-left
         .list-left__category
           #category-area
+          - if @user.present?
+          - else
             %i{class: "fas fa-list"}
             カテゴリー
             .category-box
