--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -164,3 +164,6 @@
   .footer
     .footer-logo
       = image_tag("logo-white.png", class: "logo")
+
+= javascript_include_tag 'category_edit.js'
+= javascript_include_tag 'item.js'
