--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -17,11 +17,13 @@
       .list-left
         .list-left__category
           #category-area
-            %i{class: "fas fa-list"}
-            カテゴリー
-            .category-box
-              = render "category"
-          
+            - if @user.present?
+            - else
+              %i{class: "fas fa-list"}
+              カテゴリー
+              .category-box
+                = render "category"
+            
             
         .list-left__brand
           = link_to do
