--- a/app/views/credit_cards/new.html.haml
+++ b/app/views/credit_cards/new.html.haml
@@ -61,3 +61,4 @@
     = submit_tag "追加する", id: "token_submit"
     .top-link
       = link_to "トップに戻る", root_path, class: "top-link-btn"
+= javascript_include_tag 'payjp.js'
