カード情報記入時リロードせずにjsが動くよう修正、購入時エラーが出ないよう修正

--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -18,6 +18,7 @@
         .list-left__category
           #category-area
           - if @user.present?
+          - elsif @item.present?
           - else
             %i{class: "fas fa-list"}
             カテゴリー
