--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -1,4 +1,3 @@
-#request{action: request.path}
 %header
   .header-inner
     .mainheader
@@ -18,6 +17,7 @@
         .list-left__category
           #category-area
           - if @user.present?
+          - elsif @item.present?
           - else
             %i{class: "fas fa-list"}
             カテゴリー
