--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -7,25 +7,26 @@
     .sell-container
       = form_with model: @item, url: item_path(@item.id), local: true do |f|
         .new-wrapper
-
-          #request{action: request.path}
-            .new-wrapper__main
-              .new-wrapper__main__title
-                出品画像
-                %span{class: "require"} 必須
-              .new-wrapper__main__text
-                最大10枚までアップロードできます
+          .new-wrapper__main
+            .new-wrapper__main__title
+              出品画像
+              %span{class: "require"} 必須
+            .new-wrapper__main__text
+              最大10枚までアップロードできます
               
-              .flexbox
-                .new-wrapper__main__preview
-                %label{id: "image-wrapper", action: request.path}
-                  .new-wrapper__main__image-field
-                    %i{class: "fas fa-camera"}
-                    .new-wrapper__main__image-field__text
-                    クリックしてファイルをアップロード
-                  = f.fields_for :item_photos do |i|
-                    = i.file_field :image, {class: "file-field"}
-                    = i.check_box :_destroy, {class: "hidden"}          
+            .flexbox
+              .new-wrapper__main__preview
+                -# - @item.item_photos.each do |image|
+                -#   - if image.image.present?
+                -#     = image_tag image.image.url
+              %label{id: "image-wrapper", action: request.path}
+                .new-wrapper__main__image-field
+                  %i{class: "fas fa-camera"}
+                  .new-wrapper__main__image-field__text
+                  クリックしてファイルをアップロード
+                = f.fields_for :item_photos do |i|
+                  = i.file_field :image, {class: "file-field"}
+                  = i.check_box :_destroy, {class: "hidden"}          
         
         .items-section
           .items-main
